--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,13 @@ ja:
         is_active:
           sale: "販売中"
           discontinued: "販売停止中"
+      order:
+        payment_method:
+          credit_card: "クレジットカード"
+          transfer: "銀行振込"
+      status:
+        waiting: "入金待ち"
+        payment_confirmation: "入金確認"
+        making: "製作中"
+        shipping_preparation: "発送準備中"
+        shipped: "発送済"
