--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -85,3 +85,28 @@ ja:
         too_long: "は%{count}文字以下に設定して下さい。"
         invalid: "は有効でありません。"
         confirmation: "が内容とあっていません。"
+    activerecord:
+      attributes:
+        genre:
+          name: 'ジャンル名'
+        item:
+          name: '商品名'
+          introduction: '商品説明'
+          genre_id: 'ジャンル'
+          price: '価格'
+          image: 'ファイル'
+        address:
+          post_code: '郵便番号'
+          address: '住所'
+          name: '宛名'
+        customer:
+          first_name: '名前（姓）'
+          last_name: '名前（名）'
+          first_name_kana: 'フリガナ（姓）'
+          last_name_kana: 'フリガナ（名）'
+          post_code: '郵便番号'
+          address: '住所'
+          email: 'メールアドレス'
+          phone_number: '電話番号'
+
+
